feat: Implementation of Pagination & Breaking changes
